--- a/Application/Home/View/default/Public/layout.html
+++ b/Application/Home/View/default/Public/layout.html
@@ -16,7 +16,14 @@
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/bootstrapextend/css/bootstrap.extend.css">
-    <style type="text/css">.breadcrumb {margin-top: 10px}</style>
+    <style type="text/css">
+        body {
+            -webkit-font-smoothing: antialiased;
+        }
+        .breadcrumb {
+            margin-top: 10px
+        }
+    </style>
     <block name="style"></block>
     <script type="text/javascript" src="__PUBLIC__/jquery/jquery-1.11.1.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="__PUBLIC__/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
