优化：ListBuilder使用U函数时加上MODULE_NAME确保稳定性 更新：更新logo

--- a/Application/Admin/View/Public/layout.html
+++ b/Application/Admin/View/Public/layout.html
@@ -44,6 +44,12 @@
                 padding: 0px;
             }
         }
+        .navbar-brand .brand {
+            float: left;
+            height: 40px;
+            margin-top: -10px;
+
+        }
     </style>
     <block name="script"></block>
 </head>
@@ -60,7 +66,7 @@
                 <php>if(C('WEB_SITE_LOGO')):</php>
                     <a class="navbar-brand" target="_blank" href="__ROOT__/"><img class="logo" src="{$Think.config.WEB_SITE_LOGO|get_cover='path'}"></a>
                 <php>else:</php>
-                    <a class="navbar-brand" target="_blank" href="__ROOT__/">{:C('WEB_SITE_TITLE')}</a>
+                    <a class="navbar-brand" target="_blank" href="__ROOT__/"><img class="brand" src="__ROOT__/logo.png"><span class="website-title">{:C('WEB_SITE_TITLE')}</span></a>
                 <php>endif;</php>
             </div>
             <div class="collapse navbar-collapse navbar-collapse-top">
