--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -48,9 +48,10 @@
             font-weight: lighter;
             -webkit-box-reflect: below -4px -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.2)));
         }
-        .login-panel .panel-heading .panel-title i{
-            color:#aaddff;
-            font-weight: 400;
+        .login-panel .panel-heading .panel-title .logo{
+            width: 40px;
+            height: 40px;
+            margin-top: -10px;
         }
         .login-panel .panel-heading .info{
             color: #aaddff;
@@ -76,7 +77,7 @@
     <div class="container">
         <div class="panel panel-default login-panel border-none padding-none col-xs-12 col-md-4 col-md-offset-4">
             <div class="panel-heading">
-                <h3 class="panel-title text-center"><i class="fa fa-cloud"></i> {:C('WEB_SITE_TITLE')}</h3>
+                <h3 class="panel-title text-center"><img class="logo" src="__ROOT__/logo.png"> {:C('WEB_SITE_TITLE')}</h3>
                 <div class="info text-right">————{:C('WEB_SITE_SLOGAN')}</div>
             </div>
             <div class="panel-body">
