优化：Home模块用户主页地址由User/index改为User/home便于规范化index含义 优化：Home模块用户列表地址由User/lists改为User/index便于规范化index含义

--- a/Application/Home/View/default/Comment/default.html
+++ b/Application/Home/View/default/Comment/default.html
@@ -4,7 +4,7 @@
         <corethink:comment_list name="vo" table="$__CURRENT_TABLE_ID__" group="0" data_id="$info['id']">
             <div class="media border-bottom padding-bottom">
                 <div class="media-left">
-                    <a href="{:U('User/index/uid/'.$vo['uid'])}" class="avatar">
+                    <a href="{:U('User/home/uid/'.$vo['uid'])}" class="avatar">
                         <img src="{$vo.avatar|get_cover='avatar'}" style="width:40px;height:40px;">
                     </a>
                 </div>
