--- a/Application/Home/View/default/User/side.html
+++ b/Application/Home/View/default/User/side.html
@@ -37,7 +37,7 @@
             </div>
             <div id="list1" class="panel-collapse collapse in" role="tabpanel">
                 <div class="list-group">
-                    <a class="list-group-item"href="{:U('User/index')}" target="_blank"><i class="icon icon-home"></i> 个人主页</a>
+                    <a class="list-group-item"href="{:U('User/home')}" target="_blank"><i class="icon icon-home"></i> 个人主页</a>
                     <a class="list-group-item" href="{:U('User/profile')}"><i class="icon icon-edit"></i> 修改信息</a>
                     <a class="list-group-item" href="{:U('UserMessage/index')}"><i class="icon icon-chat-dot"></i> 消息中心</a>
                     <a class="list-group-item" href="{:U('User/safe')}"><i class="icon icon-lock"></i> 账号安全</a>
