--- a/Application/Home/View/default/Document/index_manual.html
+++ b/Application/Home/View/default/Document/index_manual.html
@@ -189,7 +189,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="{:U('User/index')}"><i class="fa fa-home"></i> 个人主页</a></li>
+                                <li><a href="{:U('User/home')}"><i class="fa fa-home"></i> 个人主页</a></li>
                                 <li><a href="{:U('User/center')}"><i class="fa fa-tachometer"></i> 个人中心</a></li>
                                 <li><a href="{:U('UserMessage/index')}"><i class="fa fa-envelope"></i> 消息中心</a></li>
                                 <li><a href="{:U('Addon/index')}"><i class="fa fa-weixin"></i> 微＋平台</a></li>
