--- a/Application/Home/View/default/Public/layout.html
+++ b/Application/Home/View/default/Public/layout.html
@@ -67,7 +67,7 @@
                                         <span class="caret"></span>
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="{:U('Home/User/index')}"><i class="fa fa-home"></i> 个人主页</a></li>
+                                        <li><a href="{:U('Home/User/home')}"><i class="fa fa-home"></i> 个人主页</a></li>
                                         <li><a href="{:U('Home/User/center')}"><i class="fa fa-tachometer"></i> 个人中心</a></li>
                                         <li><a href="{:U('Home/UserMessage/index')}"><i class="fa fa-envelope"></i> 消息中心</a></li>
                                         <li><a href="{:U('Home/Addon/index')}"><i class="fa fa-weixin"></i> 微＋平台</a></li>
@@ -143,13 +143,13 @@
         <block name="bottomn-nav">
             <nav class="bottom_nav navbar-fixed-bottom">
                 <a class="item" href="__ROOT__/"><img src="__IMG__/tab1.png">首页</a>
-                <a class="item" href="{:U('Home/User/index')}"><img src="__IMG__/tab2.png">余额</a>
+                <a class="item" href="{:U('Home/User/home')}"><img src="__IMG__/tab2.png">余额</a>
                 <a class="item" href="{:U('Home/UserMessage/index')}"><img src="__IMG__/tab3.png">消息</a>
                 <div class="item has_nav" onclick="$(this).find('.more_nav').toggle();">
                     <img src="__IMG__/tab4.png">我
                     <div class="more_nav">
                         <em></em>
-                        <a href="{:U('Home/User/index')}">个人主页</a>
+                        <a href="{:U('Home/User/home')}">个人主页</a>
                         <a href="{:U('Home/User/center')}">个人中心</a>
                         <a href="{:U('Home/UserMessage/index')}">消息中心</a>
                     </div>
