--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -71,9 +71,59 @@
             }
         }
     </style>
+    <script type="text/javascript">
+        $(function(){
+            particlesJS('particles-js', {
+                particles: {
+                    color: '#fff',
+                    shape: 'triangle', // "circle", "edge" or "triangle"
+                    opacity: 1,
+                    size: 4,
+                    size_random: true,
+                    nb: 150,
+                    line_linked: {
+                        enable_auto: true,
+                        distance: 100,
+                        color: '#fff',
+                        opacity: 1,
+                        width: 1,
+                        condensed_mode: {
+                        enable: false,
+                        rotateX: 600,
+                        rotateY: 600
+                        }
+                },
+                anim: {
+                    enable: true,
+                    speed: 1
+                }
+                },
+                interactivity: {
+                    enable: true,
+                    mouse: {
+                    distance: 250
+                },
+                detect_on: 'canvas', // "canvas" or "window"
+                    mode: 'grab',
+                    line_linked: {
+                    opacity: .5
+                },
+                events: {
+                    onclick: {
+                    enable: true,
+                    mode: 'push', // "push" or "remove" (particles)
+                    nb: 4
+                    }
+                }
+                },
+                /* Retina Display Support */
+                retina_detect: true
+            });
+        })
+    </script>
 </head>
 <body>
-    <div class="background"></div>
+    <div id="particles-js" class="background"></div>
     <div class="container">
         <div class="panel panel-default login-panel border-none padding-none col-xs-12 col-md-4 col-md-offset-4">
             <div class="panel-heading">
@@ -84,14 +134,14 @@
                 <form class="login-form" action="{:U('Public/login')}" method="post">
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon border-radius-none"><i class="fa fa-user"></i></span>
-                            <input type="text" class="form-control border-radius-none" placeholder="邮箱/手机号/用户名" name="username">
+                            <span class="input-group-addon bg-none"><i class="fa fa-user"></i></span>
+                            <input type="text" class="form-control" placeholder="邮箱/手机号/用户名" name="username">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon border-radius-none"><i class="fa fa-lock"></i></span>
-                            <input type="password" class="form-control border-radius-none" placeholder="请输入密码" name="password">
+                            <span class="input-group-addon bg-none"><i class="fa fa-lock"></i></span>
+                            <input type="password" class="form-control" placeholder="请输入密码" name="password">
                         </div>
                     </div>
                     <div class="form-group">
