修复：FormBuilder在分组模式下日期类型错误 优化：调整ListBuilder的tab位置

--- a/Application/Home/View/default/Public/layout.html
+++ b/Application/Home/View/default/Public/layout.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/bootstrapextend/css/bootstrap.extend.css">
     <style type="text/css">
         body {
+            padding-top: 50px;
             -webkit-font-smoothing: antialiased;
         }
         .breadcrumb {
@@ -30,7 +31,7 @@
     <script type="text/javascript" src="__PUBLIC__/bootstrapextend/js/bootstrap.extend.js" charset="utf-8"></script>
     <block name="script"></block>
 </head>
-<body style="padding-top: 50px;">
+<body>
     <block name="wrap">
         {:hook('PageHeader')} <!-- 文档开始钩子 -->
 
