--- a/Application/Home/View/default/Document/index_forum.html
+++ b/Application/Home/View/default/Document/index_forum.html
@@ -20,10 +20,11 @@
                                     <div class="media-body">
                                         <h5 class="media-heading">
                                             <strong><a href="{:U('Document/index', array('cid' => $vo_child['id']))}">{$vo_child.title}</a></strong> 
-                                            <notempty name="vo_child.count_new_document"><span class="label label-dot label-danger"></span> ({$vo_child.count_new_document})</notempty>
+                                            <notempty name="vo_child.count_new_document"><span class="badge badge-dot bg-red pull-right">{$vo_child.count_new_document}</span></notempty>
                                         </h5>
                                         <div class="text">
-                                            帖数 {$vo_child.count_sum_document|default=0} 回复数 {$vo_child.count_sum_comment|default=0}
+                                            <span class="margin-right small">帖数 {$vo_child.count_sum_document|default=0}</span>
+                                            <span class="small">回复数 {$vo_child.count_sum_comment|default=0}</span>
                                         </div>
                                     </div>
                                 </div>
