--- a/Application/Home/View/default/User/home.html
+++ b/Application/Home/View/default/User/home.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-3">
                 <div class="thumbnail">
-                    <img src="{$info.avatar|get_cover='avatar'}">
+                    <img class="img-responsive" src="{$info.avatar|get_cover='avatar'}">
                 </div>
             </div>
             <div class="col-xs-12 col-md-9">
