--- a/Application/Home/View/default/User/side.html
+++ b/Application/Home/View/default/User/side.html
@@ -11,7 +11,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading text-center">
-        <h3 class="panel-title"><img class="img-circle" src="{$userinfo.avatar|get_cover='avatar'}"  style="width:120px;height:120px;"></h3>
+        <h3 class="panel-title"><img class="img-circle img-responsive" src="{$userinfo.avatar|get_cover='avatar'}"  style="width:120px;height:120px;"></h3>
     </div>
     <div class="panel-body">
         <table class="table margin-none">
