--- a/Application/Home/View/default/Public/index.html
+++ b/Application/Home/View/default/Public/index.html
@@ -52,7 +52,7 @@
             <h3 data-pos="['0%', '110%', '25%', '5%']" data-duration="300" data-effect="move">
                 CoreThink框架
             </h3>
-            <h4 class="hidden-xs-inline" data-pos="['0%', '110%', '40%', '5%']" data-duration="300" data-effect="move">让企业开发变得简单、高效、卓越！</h4>
+            <h4 class="hidden-xs-inline" data-pos="['0%', '110%', '40%', '5%']" data-duration="300" data-effect="move">企业级互联网+解决方案云框架，微信开发框架。！</h4>
             <div data-pos="['0%', '110%', '50%', '5%']" data-duration="200" data-effect="move">
                 <a class="btn btn-success" href="{:U('document/index/cid/1')}">免费下载（V1.0）</a>
                 <a class="btn btn-warning-inverse" href="{:U('document/index/cid/5')}">开发者社区</a>
@@ -74,9 +74,6 @@
                 <a class="btn btn-success" href="#">即 将 推 出 <span class="fa fa-hand-o-right"></span></a>
             </div>
         </div>
-        <div data-lazy-background="__IMG__/slider03.jpg">
-        </div>
-        <div data-lazy-background="__IMG__/slider04.jpg">
         </div>
     </div>
 </block>
@@ -194,14 +191,14 @@
         <div class="row">
             <div class="col-xs-12">
                 <div id="owl-case" class="owl-carousel">
-                    <a class="item"><img src="__IMG__/case05.png"><br><span>游戏约</span></a>
+                    <a href="http://youxiyue.cn" class="item"><img src="__IMG__/case05.png"><br><span>游戏约</span></a>
                     <a class="item"><img src="__IMG__/case06.png"><br><span>微＋大屏幕</span></a>
-                    <a class="item"><img src="__IMG__/case07.png"><br><span>中国设计师联盟</span></a>
+                    <a href="http://codc.coding.io" class="item"><img src="__IMG__/case07.png"><br><span>中国设计师联盟</span></a>
                     <a class="item"><img src="__IMG__/case08.png"><br><span>T3T2游戏</span></a>
-                    <a class="item"><img src="__IMG__/case01.png"><br><span>心理健康教育与咨询中心</span></a>
-                    <a class="item"><img src="__IMG__/case04.png"><br><span>“分子系统与有机器件”研究团队</span></a>
-                    <a class="item"><img src="__IMG__/case02.png"><br><span>材料科学与工程学院</span></a>
-                    <a class="item"><img src="__IMG__/case03.png"><br><span>自动化学院</span></a>
+                    <a href="http://xl.njupt.edu.cn" class="item"><img src="__IMG__/case01.png"><br><span>心理健康教育与咨询中心</span></a>
+                    <a href="http://iamcmsod.njupt.edu.cn" class="item"><img src="__IMG__/case04.png"><br><span>“分子系统与有机器件”研究团队</span></a>
+                    <a href="http://iam.njupt.edu.cn" class="item"><img src="__IMG__/case02.png"><br><span>材料科学与工程学院</span></a>
+                    <a href="http://coa.njupt.edu.cn" class="item"><img src="__IMG__/case03.png"><br><span>自动化学院</span></a>
                 </div>
             </div>
         </div>
