--- a/Application/Home/View/default/Public/layout.html
+++ b/Application/Home/View/default/Public/layout.html
@@ -47,7 +47,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <php>if(C('WEB_SITE_LOGO')):</php>
-                            <a class="navbar-brand" href="__ROOT__/"><img alt="Brand" class="brand" src="{$Think.config.WEB_SITE_LOGO|get_cover='path'}"></a>
+                            <a class="navbar-brand" href="__ROOT__/"><img alt="Brand" class="logo" src="{$Think.config.WEB_SITE_LOGO|get_cover='path'}"></a>
                         <php>else:</php>
                             <a class="navbar-brand" href="__ROOT__/">{:C('WEB_SITE_TITLE')}</a>
                         <php>endif;</php>
