优化：优化论坛模版界面

--- a/Application/Home/View/default/Document/index_default.html
+++ b/Application/Home/View/default/Document/index_default.html
@@ -43,7 +43,7 @@
                         <div class="media border-bottom padding-bottom">
                             <div class="media-left">
                                 <a href="{:U('Document/detail/id/'.$vo['id'])}">
-                                    <img class="list-cover lazy" data-original="{$vo.cover|get_cover}">
+                                    <img class="list-cover lazy" data-original="{$vo.cover|get_cover='default'}">
                                 </a>
                             </div>
                             <div class="media-body">
