完善：产品信息配置

--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -152,8 +152,8 @@
         </div>
     </div>
     <div class="bottom navbar-fixed-bottom text-center padding-top padding-bottom">
-        <span class="padding-right">Powered by corethink {:C('CORETHINK_VERSION')}</span>
-        <span>Copyright © 南京科斯克网络科技 <a href="http://corethink.cn" target="_blank">corethink.cn</a> All rights reserved.</span>
+        <span class="padding-right">Powered by {:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</span>
+        <span>Copyright © <a href="{:C('WEBSITE_DOMAIN')}" target="_blank">{:C('COMPANY_NAME')}</a> All rights reserved.</span>
     </div>
 </body>
 </html>
