--- a/Application/Home/View/default/Document/index_manual.html
+++ b/Application/Home/View/default/Document/index_manual.html
@@ -246,7 +246,7 @@
                 <ul class="list-inline text-center">
                     <li>{:C('WEB_SITE_COPYRIGHT')}</li>
                     <li><a class="padding-left border-left" href="http://www.miibeian.gov.cn/" target="_blank">{:C('WEB_SITE_ICP')}</a></li>
-                    <li><a href="http://www.corethink.cn" title="轻量级WEB产品开发框架"><span class="label label-default">CorerThink</span></a></li>
+                    <li><a href="{:C('WEBSITE_DOMAIN')}" title="轻量级WEB产品开发框架"><span class="label label-default">CorerThink</span></a></li>
                 </ul>
             </div>
         </div>
