--- a/Application/Admin/View/Public/layout.html
+++ b/Application/Admin/View/Public/layout.html
@@ -163,8 +163,8 @@
                 <block name="body">这是内容</block>
                 <div class="footer padding-top padding-bottom border-top text-muted">
                     版权所有 © 2014-<php>echo date("Y",time());</php> 
-                    <a href="http://www.corethink.cn" class="text-muted" target="_blank">CoreThink v{:C('CORETHINK_VERSION')}</a>
-                    <a href="http://www.corethink.cn" class="text-muted" target="_blank">南京科斯克网络科技有限公司</a>
+                    <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</a>
+                    <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('COMPANY_NAME')}</a>
                 </div>
             </div>
         </block>
