--- a/Application/Admin/View/Public/index.html
+++ b/Application/Admin/View/Public/index.html
@@ -37,7 +37,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class="panel-actions"></div>
+                            <div class="update pull-right"></div>
                             <i class="glyphicon glyphicon-cog"></i> 系统信息
                         </div>
                         <div class="panel-body">
@@ -214,6 +214,16 @@
                     window.location.href = url;
                 }
             );
+
+            //检测更新
+            $.get('{:U("Admin/SystemUpdate/checkVersion")}').success(function(data){
+                if(data.status == 1){
+                    $('.update').html(data.info);
+                }else{
+                    alertMessager(data.info, 'danger');
+                }
+            });
+            
         });
     </script>
 </block>
