--- a/Application/Admin/View/Public/layout.html
+++ b/Application/Admin/View/Public/layout.html
@@ -128,7 +128,7 @@
         <block name="wrap">
             <div id="left" class="col-xs-12 col-sm-2 left">
                 <!-- 切换左侧菜单 -->
-                <button id="menu-toggle" class="btn btn-default btn-block hidden-xs border-radius-none border-bottom-none" title="切换左侧菜单">
+                <button id="menu-toggle" class="btn btn-default btn-block hidden-xs border-radius-none" title="切换左侧菜单">
                     <i class="fa fa-bars"></i>
                 </button>
                 <!-- 侧边导航 -->
