--- a/Application/Admin/View/Public/css/green.css
+++ b/Application/Admin/View/Public/css/green.css
@@ -72,12 +72,18 @@
 左侧导航
  */
 .wrap>.left {
-    margin-top: 10px;
     background-color: #fff !important;
     border-right: 1px solid #ddd;
 }
+.wrap>.left #menu-toggle {
+    margin-bottom: 10px;
+    border-right: none;
+    background-color: #f6f6f6;
+    border-color: #f6f6f6;
+    color: #414141;
+}
 .wrap>.left>.panel-group {
-    padding-left: 20px;
+    padding-left: 15px;
 }
 .wrap>.left>.panel-group>.panel-default {
     border: none;
