--- a/Application/Home/View/default/User/index.html
+++ b/Application/Home/View/default/User/index.html
@@ -29,7 +29,7 @@
 
 <block name="body">
     <div class="container">
-        <div class="cards cards-borderless user-list">
+        <div class="cards cards-borderless user-list clearfix">
             <volist name="user_list" id="vo">
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <div class="card margin-bottom">
