新增：文档上一篇和下一篇功能 完善：前台用户列表样式

--- a/Application/Home/View/default/Document/detail_default.html
+++ b/Application/Home/View/default/Document/detail_default.html
@@ -59,8 +59,8 @@
                     <div class="article-pager">
                         <hr>
                         <ul class="list-unstyled">
-                            <li class="previous">上一篇：<a href="#"></a></li>
-                            <li class="next">下一篇：<a href="#"></a></li>
+                            <li class="previous">上一篇：<a href="{$info.previous.href}">{$info.previous.title}</a></li>
+                            <li class="next">下一篇：<a href="{$info.next.href}">{$info.next.title}</a></li>
                         </ul>
                         <hr>
                     </div>
