--- a/Application/Admin/View/Datebase/import.html
+++ b/Application/Admin/View/Datebase/import.html
@@ -24,8 +24,8 @@
                         <td>{$key}</td>
                         <td>-</td>
                         <td class="action">
-                            <a class="db-import" href="{:U('do_import?time='.$data['time'])}">还原</a>&nbsp;
-                            <a class="ajax-get confirm" href="{:U('del?time='.$data['time'])}">删除</a>
+                            <a class="label label-danger db-import" href="{:U('do_import?time='.$data['time'])}">还原</a>&nbsp;
+                            <a class="label label-danger ajax-get confirm" href="{:U('del?time='.$data['time'])}">删除</a>
                         </td>
                     </tr>
                 </volist>
