--- a/Application/Admin/View/Public/group.html
+++ b/Application/Admin/View/Public/group.html
@@ -121,7 +121,7 @@
         <div class="form-group">
             <input type="hidden" name="id" value="{$info.id|default=''}">
             <button class="btn btn-primary submit ajax-post" type="submit" target-form="form">确 定</button>
-            <button class="btn return" onclick="javascript:history.back(-1);return false;">返 回</button>
+            <button class="btn btn-default return" onclick="javascript:history.back(-1);return false;">返 回</button>
         </div>
     </form>
     </div>
